# pyutils

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: pytests.yaml
lists/: __init__.py  utils.py
pyutils/dicts/: __init__.py  utils.py
pyutils/lists/: __init__.py  utils.py
pyutils/paths/: __init__.py  utils.py
pyutils/shortcuts/: __init__.py  checks.py  dates.py  utils.py
pyutils/strings/: __init__.py  cleanup.py  dates.py  datetime.py  integer.py  lemma.py  lemmas.py  money.py  normalize.py  roman.py  similarity.py  transformers.py
pyutils/validators/: __init__.py  bank.py  dni.py  email.py  figi.py  isin.py  url.py
shortcuts/: __init__.py
strings/: __init__.py  cleanup.py  dates.py  roman.py  similarity.py
tests/: cleanup_test.py  dates_test.py  lemmatizer_test.py  lists_test.py  test_lemmatizer.py
validators/: __init__.py  bank.py  dni.py
